feat: add governed IAM resource APIs
